<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyMenus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Colors</string>
        
    <!-- menu options for color scheme and text size -->
    <string name="colorscheme">Colors</string>
    <string name="textsize">Text</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>    
    <string name="standard">Default</string> 
    <string name="txt_sml">Small Text</string>
    <string name="txt_med">Med Text</string>
    <string name="txt_lrg">Large Text</string>
    
</resources>
